@@ -19,6 +19,7 @@ The `Document` model can now be overridden using the new `WAGTAILDOCS_DOCUMENT_M
 Minor features
 ~~~~~~~~~~~~~~
 
+ * Snippets now support a custom ``edit_handler`` property; this can be used to implement a tabbed interface, for example. See :ref:`customising_the_tabbed_interface` (Mikalai Radchuk)
  * Date/time pickers now respect the locale's 'first day of week' setting (Peter Quade)
  * Refactored the way forms are constructed for the page editor, to allow custom forms to be used
  * Notification message on publish now indicates whether the page is being published now or scheduled for publication in future (Chris Rogers)
