@@ -1,0 +1,16 @@
+# -*- coding: utf-8 -*-
+# Generated by Django 1.9.1 on 2016-01-28 12:53
+from __future__ import unicode_literals
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('tests', '0024_validatedpage'),
+        ('tests', '0024_advertwithtabbedinterface'),
+    ]
+
+    operations = [
+    ]
